--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.339.0",
     "next": "14.1.0",
