--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.29.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.339.0",
     "next": "13.4.12",
     "next-auth": "^4.24.7",
